--- a/db/apiKeys.json.example
+++ b/db/apiKeys.json.example
@@ -3,5 +3,13 @@
 		"tmdb": {
 			"apiKey": ""
 		}
+				"firebase": {
+				"apiKey": "",
+				"authDomain": "",
+				"databaseURL": "",
+				"projectId": "",
+				"storageBucket": "",
+				"messagingSenderId": ""
+		}
 	}
 }
